Fixed up the credentials to remove the provider and subjectid as this will be handled in authn
