# pkg/api/model_login.go
@@ -26,8 +26,7 @@ func NewLoginLogContext(login *Login) logging.LogContext {
 
 func (i *loginLogContext) LogContext() map[string]string {
 	return map[string]string{
-		"login_provider":      i.login.Provider,
-		"login_subject_trunc": i.login.SubjectID[0:5],
+		"login_credential_id": i.login.CredentialID,
 		"login_tenant_id":     i.login.TenantID,
 	}
 }
